fixed menu list on smaller screen

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -75,7 +75,7 @@
 
 .nav-bar .menu-links {
   display: inline;
-  width: 280px;
+  width: 250px;
   position: absolute;
   right: 0px;
   top: 0px;
